#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.69)
AC_INIT(helloworld, 1.0.0, al269392@uji.es)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR(src/main.h)
AC_CONFIG_HEADERS(config.h)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES(Makefile
                 doc/Makefile
                 man/Makefile
                 scripts/Makefile
                 src/Makefile)
AC_OUTPUT
